# opus

./: Cargo.toml  README.md
assets/: generate_weights.rs  testvector01.mka  testvector02.mka  testvector03.mka  testvector04.mka  testvector05.mka  testvector06.mka  testvector07.mka  testvector08.mka  testvector09.mka  testvector10.mka  testvector11.mka  testvector12.mka
src/: decoder.rs  entropy.rs  frame.rs  lib.rs  maths.rs  packet.rs  silk.rs
src/celt/: bitexact.rs  decoder.rs  imdct15.rs  mod.rs
src/silk/: decoder.rs  mod.rs  tables.rs  tests.rs
