[package]
name = "opus"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Pure-rust opus decoder"
repository = "https://github.com/rust-av/opus"
readme = "README.md"
keywords = ["opus"]
edition = "2018"

[dependencies]
av-bitstream = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
av-codec = "0.2.0"
av-data = "0.2.0"
num-complex = "0.2"
log = "0.4"
integer-sqrt = "0.1.2"

[dev-dependencies]
av-format = "0.2.0"
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
interpolate_name = "0.1"
pretty_assertions = "0.5.1"
